<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layout_marginTop="15dp"
    >
    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/simpleImageView"
        android:layout_width="350dp"
        android:layout_height="150dp"
        android:src="@drawable/bmi"
        />
    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/smallImageView"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:src="@drawable/images"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="90dp"
        android:contentDescription="@string/todo" />
    <TextView
        android:id="@+id/name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Your Name:"
        android:layout_marginTop="160dp"
        android:textSize="16sp"
        android:paddingStart="20dp"
        tools:ignore="HardcodedText,RtlSymmetry" />
    <EditText
        android:id="@+id/activity_main_etName"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_below="@+id/name"
        android:layout_marginStart="20sp"
        android:text="Name"
        android:textSize="13sp"
        android:paddingStart="20dp"
        android:autofillHints=""
        android:inputType=""
        tools:ignore="HardcodedText,LabelFor,RtlSymmetry,UnusedAttribute" />
    <TextView
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:textSize="17sp"
        android:layout_below="@+id/edit_name"
        android:paddingStart="20dp"
        tools:ignore="RtlSymmetry,UnknownIdInLayout" />
    <RadioGroup
        android:layout_below="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

    <RadioButton
        android:id="@+id/male"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/men"
        android:textColor="#154"
        android:textSize="16sp"
        android:textStyle="bold"
        />

    <RadioButton
        android:id="@+id/female"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/women"
        android:textColor="#154"
        android:textSize="16sp"
        android:textStyle="bold"
        />
    </RadioGroup>
    <EditText
        android:id="@+id/edit_age"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginTop="320dp"
        android:text="@string/userage"
        android:textSize="13sp"
        android:paddingStart="20dp"
        android:layout_marginStart="20sp"
        tools:ignore="LabelFor,RtlSymmetry"
        android:inputType=""
        android:autofillHints=""
        tools:targetApi="o" />
    <EditText
        android:id="@+id/edit_weight"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_below="@+id/edit_age"
        android:text="@string/userweight"
        android:textSize="13sp"
        android:layout_marginStart="20dp"
        android:paddingStart="20dp"
        tools:ignore="HardcodedText,LabelFor,RtlSymmetry,TextFields"
        android:inputType=""
        android:autofillHints=""
        tools:targetApi="o" />
    <EditText
        android:id="@+id/edit_height"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_below="@+id/edit_weight"
        android:text="@string/userheight"
        android:textSize="13sp"
        android:paddingStart="20dp"
        android:layout_marginStart="20sp"
        tools:ignore="LabelFor,RtlSymmetry,TextFields,UnusedAttribute"
        android:inputType=""
        android:autofillHints="" />
    <Button
        android:id="@+id/activity_main_btnSave"
        android:layout_below="@id/edit_height"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="130dp"
        android:text="@string/store"
        android:textColor="@color/colorAccent"
        />

</>
